--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>spring-boot-websocket</module>
+        <module>spring-boot-mongo-rest-api</module>
     </modules>
 
     <properties>
