--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>spring-boot-websocket</module>
         <module>spring-boot-mongo-rest-api</module>
+        <module>spring-boot-elasticSearch</module>
     </modules>
 
     <properties>
